--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,14 @@ Body {
   font-family: 'Open Sans', sans-serif;
 
 }
+header a {
+  color: white;
+}
 
-#banner {
+.hero {
 
   background: url("../images/pic-crowd-mobile.jpg")fixed top center;
-  padding-bottom: 50px;
+  padding: 30px;
   background-size: cover;
 
 }
@@ -25,6 +28,7 @@ Body {
   float: left;
   margin-top: 15px;
   font-weight: 300;
+  color: white;
 }
 
 #login{
@@ -37,27 +41,30 @@ Body {
   background-color: #0071A0;
   border-bottom: 2px solid #015d82;
 }
-.title {
+
+.hero {
   text-align: center;
   color: white;
+}
+.hero h1{
   margin-top: 160px;
   margin-left: 50px;
   margin-right: 50px;
   font-weight: 500;
   font-size: 30px;
-    font-family: 'Open Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
-#subtitle {
+.hero p {
   margin-left: 75px;
   margin-right: 75px;
   font-weight: 200;
   font-size: 17px;
   margin-top: 38px;
   margin-bottom: 38px;
-}
-p {
-  text-align: center;
   color: white;
+
+}
+.nest p {
   margin: 50px;
 }
 .botton {
@@ -72,15 +79,14 @@ p {
 }
 #top-create-website-button {
 font-size: 20px;
-    padding: 13px 35px;
-    background-color: #1e8cbe;
-    border-radius: 2px;
-    color: #fff;
-    margin: 0 auto;
-    position: relative;
-    top: 18px;
-    left:5px;
-    text-decoration: none;
+padding: 13px 35px;
+background-color: #1e8cbe;
+border-radius: 2px;
+color: #fff;
+margin: 0 auto;
+position: relative;
+top: 18px;
+text-decoration: none;
 
 
 }
@@ -93,13 +99,26 @@ font-size: 20px;
   margin-top: 240px;
   margin-bottom: 113px;
 }
-.nest {
+.highlight-nest {
 
   margin: 0 auto;
 
 }
-.white{
-  color: white;
+.highlight {
+  height: 60px;
+  width: 330px;
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 34px;
+  text-align: left;
+
+
+}
+.highlights p {
+  float:left;
+  font-size: 14px;
+  margin: 0;
+  margin-top: 6px;
 }
 
 #tablet {
@@ -166,38 +185,40 @@ font-size: 20px;
   margin-top: 6px;
 
 }
-.botton2 {
-  height: 60px;
-  width: 330px;
-  margin: 0 auto;
-  margin-top: 30px;
-  margin-bottom: 34px;
-  text-align: left;
+
+main {
+  text-align:
 }
 
 .description {
   background-color: #E8F0F5;
   padding: 5px 12px;
   line-height: 35px;
+  text-align:
 
 
 
 }
 h2 {
 
-  text-align: center;
   font-weight: 400;
   color: #2c3947;
   font-size: 23px
 }
 .motherbox {
   background-color: #D1D3D7;
-  padding: 12px;
+  padding: 12px;}
 
-}
+  .features {
+    background-color: white;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    padding: 17px 7px 10px;
+    text-align: center;
 
+  }
 h3 {
-  text-align: center;
   color: #5D849D;
   font-weight: 600;
   margin-top: 10px;
@@ -213,19 +234,11 @@ h3 {
   margin-right: 10px;
 
 }
-.features {
-  background-color: white;
-  margin: 0 auto;
-  margin-top: 20px;
-  margin-bottom: 30px;
-  padding: 17px 7px 10px;
-  text-align: center;
 
-}
 .create {
   background-color: #E8F0F5;
-
   padding: 20px;
+  text-align: center;
 
 }
 #three {
@@ -246,10 +259,9 @@ h3 {
   border-radius: 100%;
   padding: 14px;
 
-
-
 }
-.black {
+
+footer {
   background-color: black;
   text-align: center;
   padding: 8px;
@@ -264,8 +276,6 @@ font-size: 12px;
 margin: 10px;
 
 }
-
-
 #auto {
 width: 150px;
 }
