--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,17 @@
 Body {
   font-family: 'Open Sans', sans-serif;
-
 }
 header a {
   color: white;
 }
-
 .hero {
-
   background: url("../images/pic-crowd-mobile.jpg")fixed top center;
   padding: 30px;
   background-size: cover;
-
 }
-
 .bar {
   background-color: #118BC0;
-  height: 45px;
+  height: 49px;
   width: 100%;
 }
 #w {
@@ -30,43 +25,39 @@ header a {
   font-weight: 300;
   color: white;
 }
-
 #login{
   float: right;
   font-size: 12px;
   margin:0px;
-  padding:  15px 5px;
-  width: 63px;
-  height: 13px;
+  padding:  17px 20px;
   background-color: #0071A0;
   border-bottom: 2px solid #015d82;
+  text-align: center;
 }
+
+/* hero bellow */
 
 .hero {
   text-align: center;
   color: white;
 }
 .hero h1{
-  margin-top: 160px;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-top: 135px;
+  margin-left: 20px;
+  margin-right: 20px;
   font-weight: 500;
   font-size: 30px;
-  font-family: 'Open Sans', sans-serif;
 }
 .hero p {
-  margin-left: 75px;
-  margin-right: 75px;
+  margin-left: 60px;
+  margin-right: 60px;
   font-weight: 200;
   font-size: 17px;
   margin-top: 38px;
   margin-bottom: 38px;
   color: white;
+}
 
-}
-.nest p {
-  margin: 50px;
-}
 .botton {
   height: 60px;
   width: 220px;
@@ -74,8 +65,6 @@ header a {
   border-radius: 2px;
   margin: 0 auto;
   padding: 5px;
-
-
 }
 #top-create-website-button {
 font-size: 20px;
@@ -87,12 +76,9 @@ margin: 0 auto;
 position: relative;
 top: 18px;
 text-decoration: none;
-
-
 }
 #arrow {
   background: url("../images/arrow-down.svg");
-
   height: 25px;
   width: 25px;
   margin: 0 auto;
@@ -100,9 +86,7 @@ text-decoration: none;
   margin-bottom: 113px;
 }
 .highlight-nest {
-
   margin: 0 auto;
-
 }
 .highlight {
   height: 60px;
@@ -111,21 +95,12 @@ text-decoration: none;
   margin-top: 30px;
   margin-bottom: 34px;
   text-align: left;
-
-
 }
-.highlights p {
-  float:left;
-  font-size: 14px;
-  margin: 0;
-  margin-top: 6px;
-}
-
 #tablet {
   float: left;
   position: relative;
   margin-right: 10px;
-  margin-left: 15px;
+  margin-left: 20px;
 }
 #ready {
   float:left;
@@ -139,16 +114,13 @@ text-decoration: none;
   font-size: 14px;
   margin: 0;
   margin-top: 6px;
-
 }
   #newspaper {
     float: left;
     position: relative;
     margin-right: 10px;
-    margin-left: 15px;
-
+    margin-left: 20px;
 }
-
 #Freshly {
   float: left;
   margin: 0;
@@ -161,15 +133,12 @@ text-decoration: none;
   font-size: 14px;
   margin: 0;
   margin-top: 6px;
-
-
 }
 #paint-brush {
   float: left;
   position: relative;
   margin-right: 10px;
-  margin-left: 15px;
-
+  margin-left: 20px;
 }
 #hundreds {
   float: left;
@@ -183,63 +152,62 @@ text-decoration: none;
   font-size: 14px;
   margin: 0;
   margin-top: 6px;
-
 }
+
 
 main {
-  text-align:
+  text-align: center;
 }
-
 .description {
   background-color: #E8F0F5;
   padding: 5px 12px;
-  line-height: 35px;
-  text-align:
-
-
+  line-height: 1.6;
 
 }
-h2 {
-
+main h2 {
   font-weight: 400;
   color: #2c3947;
   font-size: 23px
 }
 .motherbox {
   background-color: #D1D3D7;
-  padding: 12px;}
-
-  .features {
-    background-color: white;
-    margin: 0 auto;
-    margin-top: 20px;
-    margin-bottom: 30px;
-    padding: 17px 7px 10px;
-    text-align: center;
-
+  padding: 12px;
+}
+.features {
+  background-color: white;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  padding: 17px 7px 10px;
   }
-h3 {
+.features h3 {
   color: #5D849D;
   font-weight: 600;
   margin-top: 10px;
   margin-bottom: 10px;
 }
+.features img {
+  height: 35px;
+  width: 35px;
+  background-color: #c7d2d8;
+  border-radius: 100%;
+  padding: 14px;
+}
 .content {
   color: #3D4C60;
-  text-align: center;
   margin-top: 10px;
   line-height: 23px;
   font-size: 15.5px;
   margin-left: 10px;
   margin-right: 10px;
-
 }
-
-.create {
+.cta {
   background-color: #E8F0F5;
-  padding: 20px;
+  padding: 20px 20px 50px 20px;
   text-align: center;
-
+}
+.cta h2 {
+  margin-bottom: 50px;
 }
 #three {
   background-color: #1e8cbe;
@@ -252,21 +220,24 @@ h3 {
   margin: 0 auto;
   margin-top: 60px;
 }
-.features img {
-  height: 35px;
-  width: 35px;
-  background-color: #c7d2d8;
-  border-radius: 100%;
-  padding: 14px;
-
+#bottom-create-website-button {
+  font-size: 20px;
+  padding: 13px 35px;
+  background-color: #1e8cbe;
+  border-radius: 2px;
+  color: #fff;
+  margin: 0 auto;
+  text-decoration: none;
 }
+
+/*Footer below*/
 
 footer {
   background-color: black;
   text-align: center;
   padding: 8px;
 }
-ul#row1 {
+ul#links {
   padding: 0px;
 }
 li {
@@ -274,11 +245,7 @@ display: inline-block;
 color: white;
 font-size: 12px;
 margin: 10px;
-
 }
 #auto {
 width: 150px;
-}
-
-
 }
