cleaned off un-needed <p>

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ header a {
   background-color: #0071A0;
   border-bottom: 2px solid #015d82;
   text-align: center;
+  text-decoration: none;
 }
 
 /* hero bellow */
